<resources>
    <string name="app_name">Odev2FMSS</string>
    <string name="join_now">JOIN NOW</string>
    <string name="grow_together">Grow Together</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="login">LOGIN</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="or_create_a_new_account">Or Create a New Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_your_username_password"><![CDATA[Enter Your Username & Password]]></string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="create_username">Create Username</string>
    <string name="sing_up">Sing Up</string>
    <string name="create_account">Create Account:)</string>
    <string name="create_password">Create Password</string>
</resources>