<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_circle_1"
        app:shapeAppearanceOverlay="@style/CircularView"
        android:layout_width="460dp"
        android:layout_height="460dp"
        android:src="@color/circle_2"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="546dp"
        android:layout_marginBottom="-80dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_circle_2"
        app:shapeAppearanceOverlay="@style/CircularView"
        android:layout_width="460dp"
        android:layout_height="460dp"
        app:srcCompat="@color/circle_2"
        android:layout_marginStart="-183dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="253dp"
        android:layout_marginTop="-253dp"
        app:layout_constraintStart_toStartOf="@id/login_circle_1"
        app:layout_constraintEnd_toEndOf="@id/login_circle_1"
        app:layout_constraintBottom_toBottomOf="@id/login_circle_1"
        app:layout_constraintTop_toTopOf="@id/login_circle_1"
        />

    <Button
        android:id="@+id/login_button"
        style="@style/MyButtonStyle"
        app:shapeAppearanceOverlay="@style/MyButtonStyle"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="256dp"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="@id/login_circle_1"
        app:layout_constraintEnd_toEndOf="@id/login_circle_1"
        app:layout_constraintStart_toStartOf="@id/login_circle_1"
        app:layout_constraintTop_toTopOf="@id/login_circle_1"/>

    <Button
        android:id="@+id/login_new_account"
        style="@style/MyButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:text="@string/or_create_a_new_account"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="183dp"
        android:layout_marginTop="246dp"
        app:layout_constraintStart_toStartOf="@id/login_circle_1"
        app:layout_constraintEnd_toEndOf="@id/login_circle_1"
        app:layout_constraintBottom_toBottomOf="@id/login_circle_1"
        app:layout_constraintTop_toTopOf="@id/login_circle_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_forgotten_password"
        style="@style/MyButtonStyle2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:text="@string/forgotten_password"
        android:layout_marginStart="166dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="207dp"
        app:layout_constraintBottom_toBottomOf="@id/login_circle_1"
        app:layout_constraintEnd_toEndOf="@id/login_circle_1"
        app:layout_constraintStart_toStartOf="@id/login_circle_1"
        app:layout_constraintTop_toTopOf="@id/login_circle_1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_key"
        app:errorEnabled="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="425dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="@id/login_circle_1"
        app:layout_constraintEnd_toEndOf="@id/login_circle_1"
        app:layout_constraintBottom_toBottomOf="@id/login_circle_1"
        app:layout_constraintTop_toTopOf="@id/login_circle_1" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="26sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        android:layout_marginStart="244dp"
        android:layout_marginEnd="-133dp"
        android:layout_marginBottom="310dp"
        android:layout_marginTop="149dp"
        app:layout_constraintStart_toStartOf="@id/login_circle_2"
        app:layout_constraintEnd_toEndOf="@id/login_circle_2"
        app:layout_constraintBottom_toBottomOf="@id/login_circle_2"
        app:layout_constraintTop_toTopOf="@id/login_circle_2" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/username"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:inputType="textPersonName"
            android:textSize="26sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_text_3"
        android:layout_width="338dp"
        android:layout_height="61dp"
        android:fontFamily="@font/inter_semi_bold"
        android:gravity="center_vertical"
        android:text="@string/enter_your_username_password"
        android:textColor="@color/text_color2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="38dp"
        android:layout_marginTop="163dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/login_circle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text_4"
        android:layout_width="241dp"
        android:layout_height="61dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center_vertical"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-37dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="37dp"
        app:layout_constraintBottom_toBottomOf="@id/login_text_3"
        app:layout_constraintEnd_toEndOf="@id/login_text_3"
        app:layout_constraintStart_toStartOf="@id/login_text_3"
        app:layout_constraintTop_toTopOf="@id/login_text_3" />

    <Button
        android:id="@+id/login_back_button"
        app:shapeAppearanceOverlay="@style/MyBackButtonStyle"
        style="@style/MyBackButtonStyle"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="351dp"
        android:layout_marginBottom="54dp"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toTopOf="@id/login_text_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>